# swindleStones

./: CMakeLists.txt  build.sh  error_codes.txt  parameters.txt  run.sh
include/: Hand.h  Player.h  Stones.h
parameters/: stoneParameters.txt
src/: Hand.cpp  Player.cpp  Stones.cpp
